--- a/Lesson3/Site.Master
+++ b/Lesson3/Site.Master
@@ -32,11 +32,11 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
       <ul class="nav navbar-nav navbar-right">
-            <li><a href="#"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
-            <li><a href="#"><i class="fa fa-th fa-lg" aria-hidden="true"></i> Projec</a></li>
-            <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Services</a></li>
-            <li><a href="#"><i class="fa fa-info" aria-hidden="true"></i> Contact</a></li>
-            <li><a href="#"><i class="fa fa-phone" aria-hidden="true"></i> Biography</a></li>
+              <li id="home" runat="server"><a href="Default.aspx"><i class="fa fa-home fa-lg" aria-hidden="true"></i> Home</a></li>
+              <li id="project" runat="server"><a href="Project.aspx"><i class="fa fa-th fa-lg" aria-hidden="true"></i> Projec</a></li>
+              <li id="services" runat="server"><a href="Services.aspx"><i class="fa fa-cog" aria-hidden="true"></i> Services</a></li>
+              <li id="contact" runat="server"><a href="Contact.aspx"><i class="fa fa-info" aria-hidden="true"></i> Contact</a></li>
+              <li id="about" runat="server"><a href="About.aspx"><i class="fa fa-phone" aria-hidden="true"></i> Biography</a></li>
           </ul>
         </li>
       </ul>
