--- a/Lesson3/Content/app.css
+++ b/Lesson3/Content/app.css
@@ -23,5 +23,16 @@ text-shadow:1px 1px 1px #000;
            background: rgba(173,186,199,1);
         text-shadow:1px 1px 1px #000;
 }
+  .navbar-default .navbar-nav > .active > a:hover
+{
+           color: rgba(242,149,153,1);
+           background: rgba(173,186,199,1);
+        text-shadow:1px 1px 1px #000;
+}
+  .navbar-default .navbar-nav> li > a:hover
+{
+           color: rgba(248,190,192,1);
 
+        text-shadow:1px 1px 1px #000;
+}
 
